--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Display battery level as n%
+CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
