--- a/config/corne.conf
+++ b/config/corne.conf
@@ -7,3 +7,8 @@
 
 # Display battery level as n%
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+CONFIG_ZMK_KEYBOARD_NAME="Jeff's Corne"
+CONFIG_ZMK_DISPLAY_INVERT=n
+CONFIG_ZMK_WPM=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
