fix: reduce font size v1.4

--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,6 +4,7 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_20=y
 
 CONFIG_ZMK_KEYBOARD_NAME="Jeff's Corne"
 
