--- a/config/corne.conf
+++ b/config/corne.conf
@@ -4,10 +4,15 @@
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
-CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+# CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
 
 CONFIG_ZMK_KEYBOARD_NAME="Jeff's Corne"
 
 # Display battery level as n%
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
+
+# Change to ZMK Horizontal default screen
+# CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+# CONFIG_ZMK_LV_FONT_DEFAULT_SMALL_MONTSERRAT_26=y
+# CONFIG_LV_FONT_DEFAULT_MONTSERRAT_26=y
 
